[package]
name = "cargo-server-here"
edition = "2021"
version = "0.1.0"
authors = ["lopo <lopo@zju.edu.cn>"]
description = "setup a static server for local frontend files"
keywords = ["server", "locally", "static"]
license = "MIT"
repository = "https://github.com/lopo12123/server-here.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = "1.0.138"